# src/main/java/br/com/pegasus/api/restful/model/CreateLoginRequestModel.java
@@ -1,20 +1,0 @@
-package br.com.pegasus.api.restful.model;
-
-import lombok.AllArgsConstructor;
-import lombok.Builder;
-import lombok.EqualsAndHashCode;
-import lombok.Getter;
-import lombok.NoArgsConstructor;
-import lombok.Setter;
-
-@Setter
-@Getter
-@Builder(toBuilder = true)
-@NoArgsConstructor
-@AllArgsConstructor
-@EqualsAndHashCode
-public class CreateLoginRequestModel {
-    private String login;
-    private String password;
-}
-
